[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/xilosa_.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Xilo.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/UI/PLAY.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/UI/VOLUMEONTamanhoCerto.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/UI/VOLUMEOFFTamanhoCerto.png" type="Texture" id=6]
[ext_resource path="res://Logo-base.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/UI/contained2TamanhoCertoMenu.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/UI/outlined1TamanhoCertoMenu.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Background/BG_02.jpg" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Background/BG_03.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Background/BG_01.jpg" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 290
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 922.901 ],
"_edit_use_anchors_": false
}

[node name="BG_01" type="Sprite" parent="."]
position = Vector2( -287.35, 540 )
texture = ExtResource( 12 )

[node name="BG_02" type="Sprite" parent="."]
position = Vector2( 997.65, 540 )
texture = ExtResource( 10 )

[node name="BG_03" type="Sprite" parent="."]
position = Vector2( 2282.65, 540 )
texture = ExtResource( 11 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
visible = false
anchor_left = 0.0755208
anchor_top = 0.286111
anchor_right = 0.924479
anchor_bottom = 0.555556
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Um Barco Voa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayTextureButton" type="TextureButton" parent="Panel"]
anchor_left = 0.440104
anchor_top = 0.547222
anchor_right = 0.559375
anchor_bottom = 0.760185
rect_pivot_offset = Vector2( 960, 150 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MuteUnmute" type="CheckBox" parent="Panel"]
anchor_left = 0.068
anchor_top = 0.841
anchor_right = 0.119
anchor_bottom = 0.93
margin_left = 0.471756
margin_top = 0.124756
margin_right = 0.551727
margin_bottom = 0.00469971
focus_mode = 0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 5 )
pressed = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditosTextureButton" type="TextureButton" parent="Panel"]
anchor_left = 0.338
anchor_top = 0.845
anchor_right = 0.484
anchor_bottom = 0.933
margin_left = 0.55603
margin_top = -0.130737
margin_right = 0.236084
margin_bottom = -0.170715
texture_normal = ExtResource( 8 )
expand = true

[node name="CreditosText" type="Label" parent="Panel/CreditosTextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CRÃ‰DITOS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoeTextureButton" type="TextureButton" parent="Panel"]
anchor_left = 0.516
anchor_top = 0.845
anchor_right = 0.662
anchor_bottom = 0.933
margin_left = 0.410034
margin_top = -0.130737
margin_right = 0.0899658
margin_bottom = -0.170715
texture_normal = ExtResource( 8 )
expand = true

[node name="DoeText" type="Label" parent="Panel/DoeTextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "DOE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairTextureButton" type="TextureButton" parent="Panel"]
anchor_left = 0.865
anchor_top = 0.855
anchor_right = 0.938
anchor_bottom = 0.936
margin_left = -0.743774
margin_top = -0.442566
margin_right = -0.903687
margin_bottom = 0.0773926
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairText" type="Label" parent="Panel/SairTextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "SAIR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.24313
anchor_top = 0.0231114
anchor_right = 0.763963
anchor_bottom = 0.677741
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Panel/PlayTextureButton" to="." method="_on_PlayTextureButton_pressed"]
[connection signal="pressed" from="Panel/SairTextureButton" to="." method="_on_SairTextureButton_pressed"]
